--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,16 @@
 {
-  "name": "QR Scanner Pro",
-  "short_name": "QR Scan",
+  "name": "QRtoTAb_Scanner",
+  "short_name": "QRtoTAB",
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#2f80ed",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/241/241528.png",
+      "src": "./icon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ]
+
 }
